--- a/index.html
+++ b/index.html
@@ -77,9 +77,6 @@
                                 <li class="submenu">
                                     <a href="about.html">About</a>
                                 </li>
-                                <li>
-                                    <a href="contacts.html">Contacts</a>
-                                </li>
                             </ul>
                         </div>
                     </div>
@@ -288,6 +285,7 @@
                         <ul class="social">
                             <li><a href="https://github.com/buleana"><i class="fa fa-github" aria-hidden="true"></i></a></li>                            
                             <li><a href="https://www.behance.net/anaskroba0317"><i class="fa fa-behance" aria-hidden="true"></i></a></li>                           
+                            <li><a href="https://www.linkedin.com/mynetwork/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>                           
                         </ul>
                     </div>
                 </div>
