--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css">
-
+    <link href="assets/styles/buttons.css" rel="stylesheet">
     <!-- Optional theme -->
     <link rel="stylesheet" href="assets/css/bootstrap/bootstrap-theme.min.css">
-
     <!-- Custom css -->
     <link rel="stylesheet" href="assets/css/style.css">
 
@@ -111,6 +110,9 @@
                                     of any complexity. Everything related to the visual display of your site: all visual
                                     effects, animations...
                                 </p>
+                                <div style="text-align: center; padding-top:20px"> 
+                                    <button type="button" class="btn btn-lg btn-radius" ><a href="mailto:anaskroba@gmail.com">Contact me</a></button>
+                                </div>
                             </div>
                         </div>
                     </div>
