--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                     effects, animations...
                                 </p>
                                 <div style="text-align: center; padding-top:20px"> 
-                                    <button type="button" class="btn btn-lg btn-radius" ><a href="mailto:anaskroba@gmail.com">Contact me</a></button>
+                                    <button type="button" class="btn btn-lg btn-radius" ><a href="mailto:skrobanastasiia@gmail.com">Contact me</a></button>
                                 </div>
                             </div>
                         </div>
