--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css">
+    <link href="assets/styles/buttons.css" rel="stylesheet">
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="assets/css/bootstrap/bootstrap-theme.min.css">
@@ -77,9 +78,6 @@
                                 <li class="submenu">
                                     <a href="about.html" class="active-item">About</a>
                                 </li>
-                                <li>
-                                    <a href="contacts.html">Contacts</a>
-                                </li>
                             </ul>
                         </div>
                     </div>
@@ -108,11 +106,11 @@
                             <div class="text">
                                 <h1 class="margin-bottom-small">About<span class="color">.</span></h1>
                                 <p class="heading left max full grey-dark">
-                                    Good knowledge of ReactJS, Redux / Redux Toolkit.<br>
-                                    Experience with TypeScript.<br>
-                                    Be a confident GitHub user.<br>
-                                    Know the basics of how Firebase works.
+                                    Hi!<br>I don’t like to define myself by the work I’ve done. I define myself by the work I want to do. Skills can be taught, personality is inherent. I prefer to keep learning, continue challenging myself, and do interesting things that matter.
                                 </p>
+                                <div style="text-align: center; padding-top:20px"> 
+                                    <button type="button" class="btn btn-lg btn-radius" ><a href="mailto:skrobanastasiia@gmail.com">Contact me</a></button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -131,14 +129,28 @@
                         <div class="col-md-8 padding-leftright-null">
                             <div class="text last padding-topbottom-null">
                                 <p class="heading left full margin-bottom-null">
-                                    Analytic mind.<br>
-                                    Knowledge and understanding of algorithms and data structures.<br>
-                                    Good communication skills.<br>
-                                    Propensity for multitasking and self-organization.<br>
-                                    Attention to detail.<br>
-                                    Teamwork experience.<br>
-                                    100% focus on results and solution of assigned tasks.
-                                </p>
+                                    I'm a Web developer with more than 10 years of experience and work in various areas of web development, in particular, I am a frontend specialist. So I can perform work of any complexity.<br>
+                                    Everything related to the visual display of your site: all visual effects, animations...<br>
+                                    If you need to convert the PSD/Sketch/AdobeXD to HTML/CSS/JS - feel free to contact me, I'll be happy to work for you.<br>
+                                    <br>
+                                    My Front-End Tech Stack:<br><br>
+                                    - HTML5, CSS3 (SASS/SCSS, LESS and Jade/Pug for HTML)<br>
+                                    - JavaScript (ES6)<br>
+                                    - React<br>
+                                    - jQuery, AJAX<br>
+                                    - Bootstrap<br>
+                                    - Gulp, Webpack<br>
+                                    - Git
+                                    <br><br>
+                                    My skills and areas of work:
+                                    <br><br>
+                                    - Web development from scratch<br>
+                                    - Responsive websites (mobile, tablets, and desktops)<br>
+                                    - PSD/Sketch/AdobeXD to HTML/CSS/JS<br>
+                                    - Pixel-perfect development<br>
+                                    - Cross-browser compatibility (Mac, iOS, Windows, Android)<br><br>
+                                    If you want your task will be done without any issues, feel free to contact me, I'll be happy to use my knowledge and huge experience for you and for your business!
+                                </p>                                
                             </div>
                         </div>
                     </div>
@@ -157,33 +169,43 @@
                                 <!-- Single Services -->
                                 <div class="col-md-6 padding-leftright-null">
                                     <div class="text small padding-top-null padding-md-bottom">
-                                        <i class="icon ion-ios-bookmarks-outline color service margin-bottom-extrasmall"></i>
-                                        <h4 class="big margin-bottom-extrasmall">Mission</h4>
-                                        <p class="margin-bottom-null">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                                        <i class="icon ion-ios-world-outline color service margin-bottom-extrasmall"></i>
+                                        <h4 class="big margin-bottom-extrasmall">Web Application Development Services</h4>
+                                        <p class="margin-bottom-null">JavaScript/Typescript<br>
+                                            CSS3<br>
+                                            HTML5<br>
+                                            more(react.js and vue.js)</p>
                                     </div>
                                 </div>
                                 <!-- END Single Services -->
                                 <div class="col-md-6 padding-leftright-null">
                                     <div class="text small padding-top-null padding-md-bottom">
-                                        <i class="icon ion-ios-analytics-outline color service margin-bottom-extrasmall"></i>
-                                        <h4 class="big margin-bottom-extrasmall">Vision</h4>
-                                        <p class="margin-bottom-null">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                                        <i class="icon ion-key color service margin-bottom-extrasmall"></i>
+                                        <h4 class="big margin-bottom-extrasmall">The role</h4>
+                                        <p class="margin-bottom-null">client-side development<br>
+                                            Test website for usability<br>
+                                            Ensure browser compatibility</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="row no-margin">
                                 <div class="col-md-6 padding-leftright-null">
                                     <div class="text small padding-md-topbottom-null">
-                                        <i class="icon ion-ios-world-outline color service margin-bottom-extrasmall"></i>
+                                        <i class="icon ion-ios-star-half color service margin-bottom-extrasmall"></i>
                                         <h4 class="big margin-bottom-extrasmall">Experience</h4>
-                                        <p class="margin-bottom-null">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                                        <p class="margin-bottom-null">Asynchronous request and Ajax<br>
+                                            Specializeed web editing software<br>
+                                            Image editing<br>
+                                            Accessiblility<br>
+                                            Cross-browser issues<br>
+                                            search engine optimisation</p>
                                     </div>
                                 </div>
                                 <div class="col-md-6 padding-leftright-null">
                                     <div class="text small">
-                                        <i class="icon ion-ios-chatboxes-outline color service margin-bottom-extrasmall"></i>
-                                        <h4 class="big margin-bottom-extrasmall">Support</h4>
-                                        <p class="margin-bottom-null">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+                                        <i class="icon ion-card color service margin-bottom-extrasmall"></i>
+                                        <h4 class="big margin-bottom-extrasmall">Rate</h4>
+                                        <p class="margin-bottom-null">30$ per hour<br>40hr per week</p>
                                     </div>
                                 </div>
                             </div>
@@ -214,8 +236,8 @@
                 <div class="col-md-4 text">
                     <div class="row no-margin">
                         <ul class="social">
-                            <li><a href="https://github.com/buleana"><i class="fa fa-github" aria-hidden="true"></i></a></li>                            
-                            <li><a href="https://www.behance.net/anaskroba0317"><i class="fa fa-behance" aria-hidden="true"></i></a></li>                           
+                            <li><a target="_blank" href="https://github.com/buleana"><i class="fa fa-github" aria-hidden="true"></i></a></li>                            
+                            <li><a target="_blank" href="https://www.behance.net/anaskroba0317"><i class="fa fa-behance" aria-hidden="true"></i></a></li>                           
                         </ul>
                     </div>
                 </div>
