--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css">
+    <link href="assets/styles/buttons.css" rel="stylesheet">
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="assets/css/bootstrap/bootstrap-theme.min.css">
@@ -77,9 +78,6 @@
                                 <li class="submenu">
                                     <a href="about.html">About</a>
                                 </li>
-                                <li>
-                                    <a href="contacts.html">Contacts</a>
-                                </li>
                             </ul>
                         </div>
                     </div>
@@ -114,6 +112,9 @@
                                     of any complexity. Everything related to the visual display of your site: all visual
                                     effects, animations...
                                 </p>
+                                <div style="text-align: center; padding-top:20px"> 
+                                    <button type="button" class="btn btn-lg btn-radius" ><a href="mailto:skrobanastasiia@gmail.com">Contact me</a></button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -142,10 +143,40 @@
                         <div class="projects-items equal three-columns">
                             <div class="single-item one-item web app">
                                 <div class="item">
+                                    <img src="assets/img/1.jpg" alt="">
+                                    <div class="content">
+                                        <h3>Job portal webapp UI</h3>
+                                        <a target="_blank" href="https://buleana.github.io/job-portal/">view more</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- END Single Project -->
+                            <div class="single-item one-item web">
+                                <div class="item">
+                                    <img src="assets/img/2.jpg" alt="">
+                                    <div class="content">
+                                        <h3>Car rental website UI</h3>
+                                        <a target="_blank" href="https://buleana.github.io/RentalCar/">view more</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- END Single Project -->
+                            <div class="single-item one-item web app">
+                                <div class="item">
+                                    <img src="assets/img/doctor.jpg" alt="">
+                                    <div class="content">
+                                        <h3>Landing page UI for doctors</h3>
+                                        <a target="_blank" href="https://buleana.github.io/doctorsForYou/">view more</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- END Single Project -->
+                            <div class="single-item one-item web app">
+                                <div class="item">
                                     <img src="assets/img/21.png" alt="">
                                     <div class="content">
                                         <h3>React Social Media Manager</h3>
-                                        <a href="https://github.com/buleana/React-SocialMedia">view more</a>
+                                        <a target="_blank" href="https://github.com/buleana/React-SocialMedia">view more</a>
                                     </div>
                                 </div>
                             </div>
@@ -155,7 +186,7 @@
                                     <img src="assets/img/174.png" alt="">
                                     <div class="content">
                                         <h3>Dashboard - React / Redux / Saga</h3>
-                                        <a href="https://github.com/buleana/react-redux-saga-admin">view more</a>                                        
+                                        <a target="_blank" href="https://github.com/buleana/react-redux-saga-admin">view more</a>                                        
                                     </div>
                                 </div>
                             </div>
@@ -165,7 +196,7 @@
                                     <img src="assets/img/1741.png" alt="">
                                     <div class="content">
                                         <h3>Fitness app UI mobile responsive</h3>
-                                        <a href="#">view more</a>
+                                        <a target="_blank" href="#">view more</a>
                                     </div>
                                 </div>
                             </div>
@@ -175,7 +206,7 @@
                                     <img src="assets/img/2621.png" alt="">
                                     <div class="content">
                                         <h3>React Ecommerce</h3>
-                                        <a href="https://github.com/buleana/React-Ecommerce">view more</a>
+                                        <a target="_blank" href="https://github.com/buleana/React-Ecommerce">view more</a>
                                     </div>
                                 </div>
                             </div>
@@ -185,7 +216,7 @@
                                     <img src="assets/img/91374.jpg" alt="">
                                     <div class="content">
                                         <h3>Chart UI design</h3>
-                                        <a href="https://www.behance.net/gallery/130133307/Awesome-line-radar-chart">-</a>
+                                        <a target="_blank" href="https://www.behance.net/gallery/130133307/Awesome-line-radar-chart">-</a>
                                     </div>
                                 </div>
                             </div>
@@ -195,7 +226,7 @@
                                     <img src="assets/img/OJK92B11.png" alt="">
                                     <div class="content">
                                         <h3>Music Admin - React</h3>
-                                        <a href="https://github.com/buleana/React-Music-Manager">view more</a>
+                                        <a target="_blank" href="https://github.com/buleana/React-Music-Manager">view more</a>
                                     </div>
                                 </div>
                             </div>
@@ -205,7 +236,7 @@
                                     <img src="assets/img/OKR0RO1.png" alt="">
                                     <div class="content">
                                         <h3>Skinappeal</h3>
-                                        <a href="http://skinappeal.org/">view more</a>
+                                        <a target="_blank" href="http://skinappeal.org/">view more</a>
                                     </div>
                                 </div>
                             </div>
@@ -215,7 +246,7 @@
                                     <img src="assets/img/OR7V1X1.jpg" alt="">
                                     <div class="content">
                                         <h3>Gamebis</h3>
-                                        <a href="https://gamebis.ru/">view more</a>
+                                        <a target="_blank" href="https://gamebis.ru/">view more</a>
                                     </div>
                                 </div>
                             </div>
@@ -225,7 +256,7 @@
                                     <img src="assets/img/Screenshot_61.png" alt="">
                                     <div class="content">
                                         <h3>Hospital Admin - React</h3>
-                                        <a href="https://github.com/buleana/React-Hospital-Admin">view more</a>
+                                        <a target="_blank" href="https://github.com/buleana/React-Hospital-Admin">view more</a>
                                     </div>
                                 </div>
                             </div>                            
@@ -235,7 +266,7 @@
                                     <img src="assets/img/007_DKM_03.jpg" alt="">
                                     <div class="content">
                                         <h3>Ecommerce Website UI</h3>
-                                        <a href="#">-</a>
+                                        <a target="_blank" href="#">-</a>
                                     </div>
                                 </div>
                             </div>
@@ -245,7 +276,7 @@
                                     <img src="assets/img/22.png" alt="">
                                     <div class="content">
                                         <h3>Razumny Dom company</h3>
-                                        <a href="https://goldbits.com/">view more</a>
+                                        <a target="_blank" href="https://goldbits.com/">view more</a>
                                     </div>
                                 </div>
                             </div>
@@ -255,7 +286,7 @@
                                     <img src="assets/img/Banner_08.png" alt="">
                                     <div class="content">
                                         <h3>Beauty Shop - Landing Page</h3>
-                                        <a href="http://dikson.pro/">view more</a>
+                                        <a target="_blank" href="http://dikson.pro/">view more</a>
                                     </div>
                                 </div>
                             </div>
@@ -286,8 +317,8 @@
                 <div class="col-md-4 text">
                     <div class="row no-margin">
                         <ul class="social">
-                            <li><a href="https://github.com/buleana"><i class="fa fa-github" aria-hidden="true"></i></a></li>                            
-                            <li><a href="https://www.behance.net/anaskroba0317"><i class="fa fa-behance" aria-hidden="true"></i></a></li>                           
+                            <li><a target="_blank" href="https://github.com/buleana"><i class="fa fa-github" aria-hidden="true"></i></a></li>                            
+                            <li><a target="_blank" href="https://www.behance.net/anaskroba0317"><i class="fa fa-behance" aria-hidden="true"></i></a></li>                           
                         </ul>
                     </div>
                 </div>
