remove contact link

--- a/about.html
+++ b/about.html
@@ -77,9 +77,6 @@
                                 <li class="submenu">
                                     <a href="about.html" class="active-item">About</a>
                                 </li>
-                                <li>
-                                    <a href="contacts.html">Contacts</a>
-                                </li>
                             </ul>
                         </div>
                     </div>
@@ -208,7 +205,7 @@
                                 <div class="col-md-6 padding-leftright-null">
                                     <div class="text small">
                                         <i class="icon ion-card color service margin-bottom-extrasmall"></i>
-                                        <h4 class="big margin-bottom-extrasmall">Salary</h4>
+                                        <h4 class="big margin-bottom-extrasmall">Rate</h4>
                                         <p class="margin-bottom-null">30$ per hour<br>40hr per week</p>
                                     </div>
                                 </div>
