--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                     of any complexity. Everything related to the visual display of your site: all visual
                                     effects, animations...
                                 </p>
-                                <div style="text-align: center; padding-top:20px"> 
+                                <div class="text-center padding-onlytop-md"> 
                                     <button type="button" class="btn btn-lg btn-radius" ><a href="mailto:skrobanastasiia@gmail.com">Contact me</a></button>
                                 </div>
                             </div>
