--- a/index.html
+++ b/index.html
@@ -130,7 +130,6 @@
                                 <div class="filter-wrap left">
                                     <ul class="col-md-12 filters uppercase padding-leftright-null">
                                         <li data-filter="*" class="is-checked">All</li>
-                                        <li data-filter=".design">UI Design</li>
                                         <li data-filter=".web">Website</li>
                                         <li data-filter=".app">Web Apps</li>
                                     </ul>
@@ -141,10 +140,30 @@
                         <div class="projects-items equal three-columns">
                             <div class="single-item one-item web app">
                                 <div class="item">
+                                    <img src="assets/img/3.jpg" alt="">
+                                    <div class="content">
+                                        <h3>GlobalNet</h3>
+                                        <a target="_blank" href="https://gblnet.net/ru/en">view more</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- END Single Project -->
+                            <div class="single-item one-item web app">
+                                <div class="item">
                                     <img src="assets/img/1.jpg" alt="">
                                     <div class="content">
                                         <h3>Job portal webapp UI</h3>
                                         <a target="_blank" href="https://buleana.github.io/job-portal/">view more</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- END Single Project -->
+                            <div class="single-item one-item web">
+                                <div class="item">
+                                    <img src="assets/img/4.jpg" alt="">
+                                    <div class="content">
+                                        <h3>HeronCode</h3>
+                                        <a target="_blank" href="https://heroncode.com/">view more</a>
                                     </div>
                                 </div>
                             </div>
@@ -209,16 +228,6 @@
                                 </div>
                             </div>
                             <!-- END Single Project -->
-                            <div class="single-item one-item design">
-                                <div class="item">
-                                    <img src="assets/img/91374.jpg" alt="">
-                                    <div class="content">
-                                        <h3>Chart UI design</h3>
-                                        <a target="_blank" href="https://www.behance.net/gallery/130133307/Awesome-line-radar-chart">-</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- END Single Project -->
                             <div class="single-item one-item branding web">
                                 <div class="item">
                                     <img src="assets/img/OJK92B11.png" alt="">
@@ -258,26 +267,6 @@
                                     </div>
                                 </div>
                             </div>                            
-                            <!-- END Single Project -->
-                            <div class="single-item one-item design">
-                                <div class="item">
-                                    <img src="assets/img/007_DKM_03.jpg" alt="">
-                                    <div class="content">
-                                        <h3>Ecommerce Website UI</h3>
-                                        <a target="_blank" href="#">-</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- END Single Project -->
-                            <div class="single-item one-item">
-                                <div class="item">
-                                    <img src="assets/img/22.png" alt="">
-                                    <div class="content">
-                                        <h3>Razumny Dom company</h3>
-                                        <a target="_blank" href="https://goldbits.com/">view more</a>
-                                    </div>
-                                </div>
-                            </div>
                             <!-- END Single Project -->
                             <div class="single-item one-item web">
                                 <div class="item">
