--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                 <div class="item">
                                     <img src="assets/img/3.jpg" alt="">
                                     <div class="content">
-                                        <h3>GlobalNet</h3>
+                                        <h3>GlobalNet (Next.js, Redux, Docker, Laravel)</h3>
                                         <a target="_blank" href="https://gblnet.net/ru/en">view more</a>
                                     </div>
                                 </div>
@@ -162,7 +162,7 @@
                                 <div class="item">
                                     <img src="assets/img/4.jpg" alt="">
                                     <div class="content">
-                                        <h3>HeronCode</h3>
+                                        <h3>HeronCode(Jquery , Anim.js)</h3>
                                         <a target="_blank" href="https://heroncode.com/">view more</a>
                                     </div>
                                 </div>
